[workspace]
members = [
    "contracts/stargate-poc",
    "contracts/distribution",
    "contracts/withdrawal-voucher",
    "contracts/withdrawal-manager",
    "contracts/factory",
    "contracts/puppeteer",
    # "contracts/puppeteer-authz",
    "contracts/validators-stats",
    "contracts/token",
    "contracts/validators-set",
    "contracts/strategy",
    "contracts/pump",
    "contracts/hook-tester",
    "contracts/core",
    "packages/puppeteer-base",
    "contracts/auto-withdrawer",
    "packages/base",
    "packages/helpers",
]

resolver = "2"

[workspace.dependencies]
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
base64 = "0.21.5"
cw-ownable = "0.5.1"
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk", branch = "feat/LIDO-68-query-siginig-info" }
prost = "0.12.3"
prost-types = "0.12.3"
tendermint-proto = "0.34.0"
cosmwasm-std = { version = "1.5.2", default-features = false, features = [
    "stargate",
    "cosmwasm_1_2",
] }
cosmwasm-schema = { version = "1.5.0", default-features = false }
cw-storage-plus = { version = "1.2.0", default-features = false }
cw2 = { version = "1.1.2", default-features = false }
cw20 = { version = "1.0.1" }
cw721 = { version = "0.18.0" }
cw721-base = { version = "0.18.0", features = ["library"] }
cosmwasm-storage = { version = "1.5.0" }
cw-multi-test = "0.20.0"
cw-utils = { version = "1.0.3", default-features = false }
schemars = "0.8"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde-json-wasm = { version = "1.0.1" }
sha2 = { version = "0.10.8" }
bech32 = { version = "0.9.1" }

lido-puppeteer-base = { path = "./packages/puppeteer-base", default-features = false }
lido-staking-base = { path = "./packages/base", default-features = false }
lido-helpers = { path = "./packages/helpers", default-features = false }
thiserror = "1.0.50"
optfield = { version = "0.3.0" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
