[workspace]
resolver = "2"
members = [
    "contracts/auto-withdrawer",
    "contracts/core",
    "contracts/distribution",
    "contracts/factory",
    "contracts/hook-tester",
    "contracts/withdrawal-voucher",
    "contracts/withdrawal-manager",
    "contracts/native-bond-provider",
    "contracts/lsm-share-bond-provider",
    "contracts/proposal-votes-poc",
    "contracts/provider-proposals-poc",
    "contracts/pump",
    "contracts/puppeteer",
    "contracts/puppeteer-initia",
    "contracts/rewards-manager",
    "contracts/strategy",
    "contracts/token",
    "contracts/val-ref",
    "contracts/splitter",
    "contracts/mirror",
    "contracts/price-provider",
    "contracts/validators-stats",
    "contracts/validators-set",
    "contracts/redemption-rate-adapter",
    "packages/base",
    "packages/helpers",
    "packages/macros",
    "packages/puppeteer-base",
    "packages/proto",
]

[workspace.dependencies]
cosmwasm-std = { version = "2.1.0", default-features = false, features = ["std", "cosmwasm_1_2", "cosmwasm_2_0"] }
neutron-sdk = { version = "0.11.0" }
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
cw-ownable = { version = "2.0.0", default-features = false }
prost = { version = "0.12.3", default-features = false }
prost-types = { version = "0.12.3", default-features = false }
tendermint-proto = { version = "0.34.1", default-features = false }
cosmwasm-schema = { version = "2.1.0", default-features = false }
cw-storage-plus = { version = "2.0.0", default-features = false }
cw2 = { version = "2.0.0", default-features = false }
cw721 = { version = "0.18.0", default-features = false }
cw721-base = { version = "0.18.0", features = ["library"] }
cw-multi-test = { version = "2.1.0", default-features = false }
cw-utils = { version = "2.0.0", default-features = false }
serde = { version = "1.0.195", default-features = false }
serde-json-wasm = { version = "1.0.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.56", default-features = false }
optfield = { version = "0.3.0", default-features = false }
schemars = { version = "0.8.16", default-features = false }
astroport = { version = "5.5.0", default-features = false }
semver = { version = "1.0.22", default-features = false }
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.20.2" }

drop-puppeteer-base = { path = "./packages/puppeteer-base", default-features = false }
drop-staking-base = { path = "./packages/base", default-features = false }
drop-helpers = { path = "./packages/helpers", default-features = false }
drop-macros = { path = "./packages/macros", default-features = false }
drop-proto = { path = "./packages/proto", default-features = false }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
