[package]
authors = []
description = "Contract to support staking distribution"
edition = "2021"
name = "lido-distribution"
version = "1.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmos-sdk-proto  = { workspace = true }
prost             = { workspace = true }
prost-types       = { workspace = true }
protobuf          = { workspace = true }
tendermint-proto  = { workspace = true }

cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-storage-plus   = { workspace = true }
cw-ownable        = { workspace = true }
cw2               = { workspace = true }
cw20              = { workspace = true }
schemars          = { workspace = true }
serde             = { workspace = true }
serde-json-wasm   = { workspace = true }

neutron-sdk       = { workspace = true }

[dev-dependencies]
cosmwasm-storage  = { workspace = true }
cw-multi-test     = { workspace = true }
