[package]
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>", "Albert Andrejev <albert.andrejev@gmail.com>", "Murad Karammaev <muradkarammaev@gmail.com>"]
description = "Contract to deploy all Drop contracts"
edition = "2021"
name = "drop-factory"
version = "1.0.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
drop-staking-base = { workspace = true }
drop-puppeteer-base = { workspace = true }
drop-helpers = { workspace = true }
drop-macros = { workspace = true }
neutron-sdk = { workspace = true }
cw-ownable = { workspace = true }
semver = { workspace = true }

drop-native-bond-provider = { path = "../native-bond-provider", default-features = false, features = ["library"] }
drop-native-sync-bond-provider = { path = "../native-sync-bond-provider", default-features = false, features = ["library"] }
drop-lsm-share-bond-provider = { path = "../lsm-share-bond-provider", default-features = false, features = ["library"] }
drop-puppeteer = { path = "../puppeteer", default-features = false, features = ["library"] }
drop-puppeteer-native = { path = "../puppeteer-native", default-features = false, features = ["library"] }
drop-puppeteer-initia = { path = "../puppeteer-initia", default-features = false, features = ["library"] }
drop-pump = { path = "../pump", default-features = false, features = ["library"] }
drop-val-ref = { path = "../val-ref", default-features = false, features = ["library"] }

[dev-dependencies]
cw-multi-test = { workspace = true }
