[package]
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
description = "Contract to facilitate base interchain features"
edition = "2021"
name = "lido-interchain-interceptor"
version = "1.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base64 = "0.21.2"
cosmos-sdk-proto = {version = "0.19.0", default-features = false}
neutron-sdk = {package = "neutron-sdk", version = "0.6.1"}
prost = "0.11"
prost-types = "0.11"
protobuf = "3.2.0"
tendermint-proto = "0.32"

cosmwasm-schema = {version = "1.3.1"}
cosmwasm-std = {version = "1.2.1"}
cw-storage-plus = {version = "1.0.1"}
cw2 = {version = "1.0.1"}
cw20 = {version = "1.0.1"}
schemars = "0.8"
serde = {version = "1.0.127", default-features = false, features = ["derive"]}
serde-json-wasm = {version = "1.0.0"}

[dev-dependencies]
cosmwasm-storage = {version = "1.0"}
cw-multi-test = "0.16.2"
