[package]
authors = ["Albert Andrejev <albert.andrejev@gmail.com>"]
description = "Contract to control proposals voting process"
edition = "2021"
name = "drop-proposal-votes-poc"
version = "1.0.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmos-sdk-proto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw-storage-plus = { workspace = true }
cw-ownable = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
neutron-sdk = { workspace = true }
drop-staking-base = { workspace = true }
drop-helpers = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
