[package]
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
description = "Contract to facilitate base interchain features"
edition = "2021"
name = "lido-puppeteer"
version = "1.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base64 = { workspace = true }
cosmos-sdk-proto = { workspace = true }
neutron-sdk = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tendermint-proto  = { workspace = true }

cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
lido-staking-base = { workspace = true }
lido-helpers = { workspace = true }
lido-puppeteer-base = { workspace = true }

[dev-dependencies]
cosmwasm-storage = { workspace = true }
cw-multi-test = { workspace = true }
