[package]
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
description = "Contract to provide redemption rate"
edition = "2021"
name = "drop-redemption-rate-adapter"
version = "1.0.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
cw2 = { workspace = true }
drop-staking-base = { workspace = true }
drop-helpers = { workspace = true }
semver = { workspace = true }
neutron-sdk = { workspace = true }
cw-storage-plus = { workspace = true }
