[package]
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
description = "Contract to stake tokens on remote zone using authz"
edition = "2021"
name = "drop-staker"
version = "1.0.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmos-sdk-proto = { workspace = true }
neutron-sdk = { workspace = true }
prost = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
drop-helpers = { workspace = true }
drop-staking-base = { workspace = true }
cw-ownable = { workspace = true }
