[package]
authors = []
description = "Contract to implement staking strategies"
edition = "2021"
name = "drop-strategy"
version = "1.3.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
neutron-sdk = { workspace = true }
drop-staking-base = { workspace = true }
drop-helpers = { workspace = true }
drop-puppeteer-base = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
drop-distribution = { path = "../distribution", default-features = false }
drop-factory = { path = "../factory", default-features = false }
