[package]
authors = ["Murad Karammaev <muradkarammaev@gmail.com>"]
description = "Contract module which stores validator's referral codes and their on_top stake"
edition = "2021"
name = "drop-val-ref"
version = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
neutron-sdk = { workspace = true }
drop-staking-base = { workspace = true }
cw2 = { workspace = true }
cw-ownable = { workspace = true }
drop-helpers = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
