[package]
authors = ["Albert Andrejev <albert.andrejev@gmail.com>"]
description = "Contract to facilitate base interchain features with authz module usage"
edition = "2021"
name = "lido-validators-stats"
version = "1.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bech32            = { workspace = true }
neutron-sdk       = { workspace = true }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-ownable        = { workspace = true }
cw2               = { workspace = true }
serde-json-wasm   = { workspace = true }
sha2              = { workspace = true }
lido-staking-base = { workspace = true }
lido-helpers      = { workspace = true }
